module commands to refresh